[tool.poetry]
name = "hutchagent"
version = "0.1.0"
license = "MIT"
description = ""
authors = [
    "Daniel Lea <Daniel.Lea@nottingham.ac.uk>",
    "Vasiliki Panagi <vasiliki.panagi@nottingham.ac.uk>",
    "Samuel Adejumo <Samuel.Adejumo1@nottingham.ac.uk>",
    "Jonathan Couldridge <Jonathan.Couldridge@nottingham.ac.uk>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
pika = {version="^1.2.1", optional=true}
requests = "^2.27.1"
croniter = "^1.3.5"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
pandas = "^1.4.4"
azure-storage-queue = {version = "^12.5.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^5.0.1"
tox = "^3.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.extras]
rabbitmq = ["pika"]
azure-queue = ["azure-storage-queue"]

[tool.poetry.scripts]
hutchagent = "hutchagent.main:main"
build-log-db = "hutchagent.db_logging:create_log_table"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
