[tool.poetry]
name = "hutchagent"
version = "0.1.0"
license = "MIT"
description = ""
authors = [
    "Daniel Lea <Daniel.Lea@nottingham.ac.uk>",
    "Vasiliki Panagi <vasiliki.panagi@nottingham.ac.uk>",
    "Samuel Adejumo <Samuel.Adejumo1@nottingham.ac.uk>",
    "Jonathan Couldridge <Jonathan.Couldridge@nottingham.ac.uk>",
]
packages = [
  {include = "hutchagent"},
  {include = "scripts"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SQLAlchemy = "^1.4.36"
pika = "^1.2.1"
requests = "^2.27.1"
croniter = "^1.3.5"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.extras]
azure-queue = ["azure-storage-queue"]

[tool.poetry.scripts]
hutchagent = "scripts.main:main"
build-log-db = "hutchagent.db_logging:create_log_table"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
