[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hutchagent"
description = ""
version = "0.1.0"
requires-python = ">=3.9,<3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Lea", email = "Daniel.Lea@nottingham.ac.uk" },
  { name = "Vasiliki Panagi", email = "vasiliki.panagi@nottingham.ac.uk" },
  { name = "Samuel Adejumo", email = "Samuel.Adejumo1@nottingham.ac.uk" },
  { name = "Jonathan Couldridge", email = "Jonathan.Couldridge@nottingham.ac.uk" }
]
dependencies = [
  "SQLAlchemy~=1.4.36",
  "pandas~=1.4.4",
  "psycopg2~=2.9.3",  # support postgres by default
  "requests~=2.27.1",
  "pika~=1.2.1",
  "croniter~=1.3.5",
  "python-dotenv~=0.20.0"
]

[project.optional-dependencies]
mysql = [
  "mysqlclient~=2.1.1",
]
sqlserver = [
  "pyodbc~=4.0.35",
]

[project.scripts]
hutchagent = "scripts.main:main"
build-log-db = "hutchagent.db_logging:create_log_table"

[tool.hatch.build]
only-packages = true
include = [
  "hutchagent",
  "scripts",
]

# Add lib packages to wheel
[tool.hatch.build.targets.wheel.force-include]
"../../lib/hutch_utils" = "hutch_utils"
"../../lib/rquest_dto" = "rquest_dto"
"../../lib/omop_entities" = "omop_entities"

# Add lib packages to sdist
[tool.hatch.build.targets.sdist.force-include]
"../../lib/hutch_utils" = "hutch_utils"
"../../lib/rquest_dto" = "rquest_dto"
"../../lib/omop_entities" = "omop_entities"
