[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rquest-omop-worker"
description = ''
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Lea", email = "Daniel.Lea@nottingham.ac.uk" },
]
dependencies = [
  "SQLAlchemy~=1.4.36",
  "pandas~=1.4.4",
  "psycopg2~=2.9.3",  # support postgres by default
  "requests~=2.27.1"
]
dynamic = ["version"]

[project.optional-dependencies]
mysql = [
  "mysqlclient~=2.1.1",
]
sqlserver = [
  "pyodbc~=4.0.35",
]

[project.scripts]
rquest-omop-worker = "scripts.worker:main"

[tool.hatch.version]
path = "rquest_omop_worker/__about__.py"

[tool.hatch.build]
only-packages = true
include = [
  "rquest_omop_worker",
  "scripts",
]

# Add lib packages to wheel
[tool.hatch.build.targets.wheel.force-include]
"../../lib/hutch_utils" = "hutch_utils"
"../../lib/rquest_dto" = "rquest_dto"
"../../lib/omop_entities" = "omop_entities"

# Add lib packages to sdist
[tool.hatch.build.targets.sdist.force-include]
"../../lib/hutch_utils" = "hutch_utils"
"../../lib/rquest_dto" = "rquest_dto"
"../../lib/omop_entities" = "omop_entities"

[tool.hatch.envs.mysql]
skip-install = true
extra-dependencies = [
  "mysqlclient~=2.1.1",
]

[tool.hatch.envs.sqlserver]
skip-install = true
extra-dependencies = [
  "pyodbc~=4.0.35",
]
