[tool.poetry]
name = "hutch-utils"
version = "0.1.0"
description = ""
authors = ["Daniel Lea <Daniel.Lea@nottingham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
