[tool.poetry]
name = "omop-entities"
version = "0.1.0"
description = ""
authors = ["Daniel Lea <Daniel.Lea@nottingham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
